# pygorich

./: README.md  gsea.py  setup.cfg
pygorich/: gsea.py
