[metadata]
# replace with your username:
name = pygorich
version = 0.9
author = Matthias Bieg
author_email = matthias.bieg@gmail.com
description = A python package for Gene Set Enrichment Analyses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HiDiHlabs/pygorich
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.0
